applications/apcupsd/resources/namespace.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: apcupsd
  labels:
    pod-security.kubernetes.io/enforce: privileged
