applications/apcupsd/resources/apcupsd-exporter.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: apcupsd-exporter

spec:
  replicas: 1
  selector:
    matchLabels:
      app: apcupsd-exporter
  template:
    metadata:
      labels:
        app: apcupsd-exporter
    spec:
      containers:
        - args:
            - -apcupsd.addr
            - service:3551
            - -apcupsd.network
            - tcp
            - -telemetry.addr
            - :9162
          image: docker.io/sfudeus/apcupsd_exporter:master_1.19
          name: apcupsdexporter
          ports:
            - name: telemetry
              containerPort: 9162
