applications/apcupsd/resources/apcupsd-exporter-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: apcupsd-exporter
  labels:
    app: apcupsd-exporter

spec:
  selector:
    app: apcupsd-exporter
  type: ClusterIP
  ipFamilies:
    - IPv4
    - IPv6
  ipFamilyPolicy: RequireDualStack
  ports:
    - name: telemetry
      port: 9162
      targetPort: 9162
