applications/apcupsd/resources/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: apcupsd
spec:
  podSelector:
    matchLabels:
      app: apcupsd
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: apcupsd
          podSelector:
            matchLabels:
              app: apcupsd-exporter
      ports:
        - port: 3551
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: apcupsd-exporter
spec:
  podSelector:
    matchLabels:
      app: apcupsd-exporter
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/component: opentelemetry-collector
              app.kubernetes.io/instance: monitoring.otelcol-gateway
      ports:
        - port: 9162
          protocol: TCP
